# Solarix

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  demo.sh  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  nightly.yml
_bmad-output/: bounty-requirements.md  problem-solution-2026-04-06.md
_bmad-output/brainstorming/: brainstorming-session-2026-04-05-rust.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-and-configuration.md  1-2-database-connection-and-system-table-bootstrap.md  1-3-docker-compose-and-health-endpoint.md  2-1-idl-manager-and-on-chain-fetch.md  2-2-manual-idl-upload-and-program-registration.md  2-3-dynamic-schema-generation.md  3-1-solarixdecoder-trait-and-instruction-decoding.md  3-2-account-state-decoding.md  3-3-rpc-block-source-and-rate-limited-fetching.md  3-4-storage-writer-and-atomic-checkpointing.md  3-5-batch-indexing-pipeline-orchestrator.md  4-1-websocket-transaction-stream.md  4-2-streaming-pipeline-and-gap-detection.md  4-3-cold-start-and-graceful-shutdown.md  5-1-program-management-endpoints.md  5-2-dynamic-query-builder-and-filters.md  5-3-instruction-and-account-query-endpoints.md  5-4-aggregation-statistics-and-health-enhancement.md  deferred-work.md  e2e-verification-sprint-4.md  sprint-status.yaml  tech-debt-sweep-sprint-2-3.md
_bmad-output/planning-artifacts/: prd.md
_bmad-output/planning-artifacts/architecture/: architecture-validation-results.md  core-architectural-decisions.md  implementation-patterns-consistency-rules.md  index.md  project-context-analysis.md  project-structure-boundaries.md  starter-template-evaluation.md
_bmad-output/planning-artifacts/epics/: epic-1-project-foundation-first-boot.md  epic-2-program-registration-idl-acquisition.md  epic-3-transaction-decoding-batch-indexing.md  epic-4-real-time-streaming-cold-start.md  epic-5-query-api-filtering.md  epic-6-observability-production-hardening.md  epic-7-documentation-demo-readiness.md  epic-list.md  index.md  overview.md  requirements-inventory.md
_bmad-output/planning-artifacts/research/: agent-1d-solana-rpc-capabilities.md  agent-1e-custom-borsh-decoder-feasibility.md  agent-2a-idl-to-ddl-mapping.md  agent-2b-hybrid-storage-architecture.md  agent-2c-backfill-pipeline-cold-start.md  agent-2d-dynamic-rest-api-design.md  agent-2e-decode-paths-testing-strategy.md  anchor-idl-type-spec-borsh-wire-format.md  technical-solarix-universal-solana-indexer-research-2026-04-05.md
docs/: anchor-idl-toolkit-proposal.md  architecture.md  operating-solarix.md  runbook.md  x-thread.md
docs/adr/: 0002-ci-pipeline.md
docs/research/: on-chain-idl-availability.md
fuzz/: Cargo.toml
fuzz/corpus/decode_account/: 05_data_account_value_42  06_data_account_value_max  07_disc_only  08_disc_only_no_payload_short  09_unknown_disc  10_data_account_with_trailing  11_partial_disc  12_data_account_signed_max_value  13_data_account_zero  18_data_account_zero_pad_4k  20_data_account_alt_pattern  21_data_account_disc_alt_payload
fuzz/corpus/decode_instruction/: 05_initialize_u64_42  06_initialize_u64_max  08_unknown_disc  09_initialize_short_payload  10_initialize_trailing  11_partial_disc  12_initialize_signed_min  17_disc_only_legacy_global  18_initialize_random_args  19_initialize_zero_pad_4k
fuzz/fuzz_targets/: decode_account.rs  decode_instruction.rs
scripts/: collect-fuzz-corpus.sh
src/: config.rs  lib.rs  main.rs  registry.rs  runtime_stats.rs  startup.rs  types.rs
src/api/: filters.rs  handlers.rs  mod.rs
src/decoder/: mod.rs
src/idl/: fetch.rs  mod.rs
src/pipeline/: mod.rs  rpc.rs  ws.rs
src/storage/: mod.rs  queries.rs  schema.rs  writer.rs
tests/: api_endpoints.rs  api_request_id_propagation.rs  bootstrap_test.rs  decode_roundtrip.rs  filter_builder_contracts.rs  filter_sql_exec.rs  idl_address_vectors.rs  instrument_coverage.rs  integration_register_query.rs  json_log_shape.rs  litesvm_pipeline.rs  log_levels.rs  mainnet_smoke.rs  registration_test.rs  regression_e2e_sprint4.rs  schema_against_pg.rs  schema_snapshots.rs  shutdown_summary.rs
tests/common/: api.rs  decoder_fixtures.rs  known_programs.rs  mod.rs  postgres.rs
tests/fixtures/idls/: all_types.json  reserved_collision_v030.json  simple_v030.json
tests/snapshots/: schema_snapshots__all_types_ddl.snap  schema_snapshots__reserved_collision_ddl.snap  schema_snapshots__simple_v030_ddl.snap
