[package]
name = "solarix"
version = "0.1.0"
edition = "2021"

[dependencies]
# API
axum = "0.8"
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "json",
  "chrono",
] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Config
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Error handling
thiserror = "2"
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Rate limiting & retry
governor = "0.10"
backon = "1"
# Solana (types only for now -- actual usage in later stories)
# chainparser = { git = "https://github.com/valentynkit/chainparser", branch = "solarix-v3" }
# anchor-lang-idl-spec = "0.1.0"
# solana-rpc-client-api = "3"
# solana-pubsub-client = "3"

[dev-dependencies]
proptest = "1"
axum-test = "16"
tokio = { version = "1", features = ["test-util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
