[package]
name = "solarix"
version = "0.1.0"
edition = "2021"

[dependencies]
# API
axum = { version = "0.8", features = ["macros"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "json",
  "chrono",
] }
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Config
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# HTTP tracing + request-id middleware (Story 6.1)
tower-http = { version = "0.6", features = ["trace", "request-id"] }
# Sortable request IDs (Story 6.1)
uuid = { version = "1", features = ["v7"] }
# Error handling
thiserror = "2"
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Rate limiting & retry
governor = "0.10"
backon = "1"
# Solana
# chainparser = { git = "https://github.com/valentynkit/chainparser", branch = "solarix-v3" }
anchor-lang-idl-spec = "0.1.0"
solana-pubkey = { version = "2", features = ["curve25519", "sha2"] }
# solana-rpc-client-api = "3"
# solana-pubsub-client = "3"
# Async trait for object-safe trait boundaries
async-trait = "0.1"
# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
# Encoding & compression
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"
flate2 = "1"

[dev-dependencies]
http-body-util = "0.1"
proptest = "1"
axum-test = "16"
tokio = { version = "1", features = ["test-util"] }
insta = "1"
# Story 6.1: tests/api_request_id_propagation.rs drives a Router via
# `tower::ServiceExt::oneshot` because axum-test 16.x still targets
# axum 0.7 while the project is on axum 0.8.
tower = { version = "0.5", features = ["util"] }
# Story 6.5: testcontainers async harness for integration tests.
# `postgres` feature only — `blocking` is deliberately excluded because
# Solarix is fully async tokio + sqlx and the SyncRunner would deadlock
# the executor. Version verified via context7 (2026-04-07).
testcontainers-modules = { version = "0.15", features = ["postgres"] }
# Story 6.5: in-process Solana VM for the LiteSVM pipeline test (Path A).
# Pinned to a 0.x version that resolves cleanly against the existing
# solana-pubkey v2 dep. Verified via context7 (2026-04-07).
litesvm = "0.6"

[features]
# Enables tests that require external services (e.g. PostgreSQL via testcontainers).
# Story 6.5 wired the harness at `tests/common/postgres.rs` and un-ignored the
# 6.4 stubs that depended on it.
integration = []
# Story 6.5: gated nightly mainnet smoke test. Depends transitively on
# `integration` because `tests/mainnet_smoke.rs` consumes
# `tests/common/postgres.rs` (which is gated behind
# `#[cfg(feature = "integration")]`). The literal nightly.yml command
# `cargo test --release --features mainnet-smoke -- mainnet_smoke`
# automatically pulls in `integration` thanks to this dependency.
mainnet-smoke = ["integration"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
