[package]
name = "solarix-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
# anchor-lang-idl-spec is a type the fuzz targets name directly (not re-exported
# by solarix), so the fuzz crate declares it as its own dep. Version must stay
# in lockstep with the main crate's dep.
anchor-lang-idl-spec = "0.1.0"

[dependencies.solarix]
path = ".."

# Disconnect this crate from any parent workspace. The parent solarix crate has
# no `[workspace]` section, but this empty marker makes the isolation explicit
# so fuzz/ never gets pulled in if a workspace is added later.
[workspace]

[[bin]]
name = "decode_instruction"
path = "fuzz_targets/decode_instruction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_account"
path = "fuzz_targets/decode_account.rs"
test = false
doc = false
bench = false
